Merged in feature/CAP-1201 (pull request #686)
CAP-1201 - Moved to a multi-allocation-per-card spend control model

* Slowly updating UI for API changes

* Cleanup

* Cleanup

* Merge branch 'master' into feature/CAP-1201

* Changed Set to List

* Fixed test

* Renamed field

* Removed RecordNotFound DeclineReason and related decline code

* Fixed compile errors

* Merge branch 'master' into feature/CAP-1201


Approved-by: Slava Akimov